--- a/templates/header.html
+++ b/templates/header.html
@@ -24,7 +24,7 @@
 <div class="navbar navbar-default navbar-fixed-top" id="main-nav">
     <div class="container desktop">
         <div class="navbar-header">
-            <a href="{% url 'posts' %}" class="navbar-brand">Connected</a>
+            <a href="{% url 'home' %}" class="navbar-brand">Connected</a>
             <button type="button" data-toggle="collapse" data-target="#navbar-main" class="navbar-toggle">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -35,7 +35,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_authenticated %}
                     <li>
-                      <a href="{% url 'posts' %}">
+                      <a href="{% url 'home' %}">
                         <i class="fa fa-home" aria-hidden="true"></i>
                       </a>
                     </li>
