--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
                 <div class="card view-update {{ post.pk }}">
                     <div class="card__panel-head">
                         <div class="poster__info">
-                            <a href="{% url 'hellodjango' %}" class="poster__name">
+                            <a href="{% url 'profile' post.author.pk %}" class="poster__name">
                                 {% if post.author.profile_pic %}
                                     <img class="poster__profilepic" src="/{{ post.author.profile_pic }}">
                                 {% endif %}
