--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,7 +6,7 @@
 <div class="row single-post">
   <div class="single-post-card view-update {{ object.pk }}">
     <div class="header">
-      <a href="{% url 'hellodjango' %}">
+      <a href="{% url 'profile' object.author.pk %}">
         {% if object.author.profile_pic %}
           <img class="picture-circle--medium" src="/{{ object.author.profile_pic }}">
         {% endif %}
