--- a/templates/header.html
+++ b/templates/header.html
@@ -1,48 +1,22 @@
-
-{% comment %} <!-- Unordered list -->
-<ul>
-    <!-- request means current HttpRequest -->
-    <!--  -->
-    {% if request.user.is_authenticated %}
-        <li>
-            Hi, {{request.user.username}}
-        </li>
-        <li>
-            <a href="{% url 'logout' %}">Logout</a>
-        </li>
-    {% else %}
-        <li>
-            <a href="{% url 'login' %}">Login</a>
-        </li>
-        <li>
-            <a href="{% url 'signup' %}">Signup</a>
-        </li>
-    {% endif %}
-</ul> {% endcomment %}
-
+{% load custom_tags %}
 
 <div class="navbar navbar-default navbar-fixed-top" id="main-nav">
     <div class="container desktop">
         <div class="navbar-header">
             <a href="{% url 'home' %}" class="navbar-brand">Connected</a>
-            <button type="button" data-toggle="collapse" data-target="#navbar-main" class="navbar-toggle">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
         </div>
         <div id="navbar-main" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_authenticated %}
                     <li>
-                      <a href="{% url 'home' %}">
-                        <i class="fa fa-home" aria-hidden="true"></i>
-                      </a>
+                        <a href="{% url 'home' %}">
+                            <i class="fa fa-home {% if request.resolver_match.url_name == 'home' %}active{% endif %}" aria-hidden="true"></i>
+                        </a>
                     </li>
-                    <li><a href="{% url 'hellodjango' %}"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                    <li><a href="{% url 'make_post' %}"><i class="fa fa-plus" aria-hidden="true"></i></a></li>
-                    <li><a href="{% url 'hellodjango' %}"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                    <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
+                    <li><a href="{% url 'explore' %}"><i class="fa fa-search {% active 'explore' %}" aria-hidden="true"></i></a></li>
+                    <li><a href="{% url 'make_post' %}"><i class="fa fa-plus {% active 'make_post' %} " aria-hidden="true"></i></a></li>
+                    <li><a href="{% url 'profile' request.user.pk %}"><i class="fa fa-user {% active 'profile' %}" aria-hidden="true"></i></a></li>
+                    <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out {% active 'logout' %}" aria-hidden="true"></i></a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
                     <li><a href="{% url 'signup' %}">Signup</a></li>
